# imgo_method

./: .gitmodules  CMakeLists.txt  README.md
GCGen/: CMakeLists.txt
GCGen/sample_src/Grishagin/: GrishaginConstrainedProblem.cpp  grishagin_function.cpp
GCGen/sample_src/Hill/: HillProblem.hpp
include/: ConstrainedTrial.h  GsaMethod.h  IConstrainedObjectiveFunction.h  IConstrainedOptimizationMethod.h  IConstrainedStronginOptimizationMethod.h  IGeneralCharacteristicOptimizationMethod.h  IGeneralNumericalOptimizationMethod.h  IGeneralOptimizationMethod.h  IGeneralStronginOptimizationMethod.h  IObjectiveFunction.h  IStronginOptimizationMethod.h  Map.h  MyMath.h  ResultMethod.h  Solver.h  StronginResultMethod.h  TaskOptimizationMethod.h  Trial.h  gsa.h  imgo.h  map.h  mggsa.h  myMath.h  my_math.h  opt_method.h  optimization_method.h  output_results.h  peano.h  print_result.h  task.h
include/AbstractOptimizationMethods/: IConstrainedStronginOptimizationMethod.h  IGeneralCharacteristicOptimizationMethod.h  IGeneralNumericalOptimizationMethod.h  IGeneralOptimizationMethod.h  IGeneralStronginOptimizationMethod.h  IStronginOptimizationMethod.h
include/OptimizationTask/: MultiDimensionalTaskOptimizationMethod.h  OneDimensionalOptimizationTask.h
include/ResultMethods/: StronginResultMethod.h
include/StronginMethods/: imgo.h
include/Trials/: ConstrainedTrial.h
include/base_classes/: IGeneralReport.h
include/base_structures/: GeneralParametersNumericalOptMethod.h
include/gnuplot/: OutputFile.h  Script.h  TrialsFile.h  VariablesFile.h  output_file.h  start_script.h
include/opt_methods/: DIRECTMethod.h  GsaMethod.h  IIndexSchemeOptMethod.h  ImgoMethod.h  MggsaMethod.h  PiyavskyMethod.h  ScanningMethod.h  imgo.h  mggsa.h
include/opt_problems/: BaseFittingFamilyOptProblems.h  ConstrainedOptProblem.h  FamilyProblem.h  MultiDimensionalConstrainedFittingFamilyProblem.h  MultiDimensionalConstrainedProblem.h  OneDimConstrainedProblem.h  OneDimensionalConstrainedProblem.h  OneDimensionalFamilyOptProblemsGCGen.h  OneDimensionalFamilyProblem.h  OneDimensionalProblem.h  OptProblem.h
include/opt_tasks/: OneDimensionalTask.h
include/reports/: ScanningReport.h
include/result_methods/: MggsaResultMethod.h  ResultMethod.h  StronginResultMethod.h
include/solvers/: IGeneralSolver.h  ScanningSolver.h
include/tasks/: FamilyOptProblemsTask.h  GeneralFamilyOptProblemsTask.h  ImgoTask.h  MggsaTask.h  PiyavskyGsaTask.h  ScanningTask.h  Task.h  task.h
include/test_opt_problems/: FittingFamilyOptProblems.h  MultiDimensionalConstrainedTestOptProblems.h  OneDimConstrainedTestProblems.h  OneDimTestProblems.h  OneDimensionalConstrainedTestOptProblems.h  OneDimensionalConstrainedTestProblems.h  OneDimensionalTestOptProblems.h  OneDimensionalTestProblems.h  onedimensional_opt_problems.h
include/trials/: IndexTrial.h  Trial.h
samples/: CMakeLists.txt  direct_mggsa_operational_characteristics.cpp  direct_operational_characteristics.cpp  direct_sample.cpp  direct_test.cpp  evolvent_test.cpp  fitting_family_problems.cpp  gsa_sample.cpp  gsa_test.cpp  imgo_operational_characteristics.cpp  imgo_sample.cpp  imgo_test.cpp  incr_test.cpp  lipschitz_test.cpp  map_test.cpp  mggsa_operational_characteristics.cpp  mggsa_operational_characteristics_incr_test.cpp  mggsa_operational_characteristics_key_test.cpp  mggsa_operational_characteristics_r_test.cpp  mggsa_operational_characteristics_test.cpp  mggsa_operational_characteristics_test_density.cpp  mggsa_operational_characteristics_test_incr.cpp  mggsa_operational_characteristics_test_key.cpp  mggsa_operational_characteristics_test_r.cpp  mggsa_sample.cpp  mggsa_test.cpp  mggsa_test_density.cpp  mggsa_test_evolvent.cpp  mggsa_test_families.cpp  mggsa_test_incr.cpp  mggsa_test_lipschitz.cpp  multidimensional_constrained_operational_characteristics.cpp  onedimensional_operational_characteristics.cpp  operational_characteristics.cpp  peano_operational_characteristics.cpp  peano_sample.cpp  peano_test.cpp  piyavsky_test.cpp  sample.cpp  sample_fitting_problem.cpp  (+4 more)
samples/new_model_class/: fitting_family_problems.cpp  fitting_family_problems_operations_characteristics.cpp  fitting_family_problems_plot.cpp  fitting_family_problems_search_solution.cpp
scripts/: chart.gp  direct_mggsa_operational_characteristics.gp  direct_operational_characteristics.gp  direct_sample.gp  direct_test.gp  evolvent_test.gp  fitting_family_problems.gp  gsa_sample.gp  gsa_test.gp  imgo_operational_characteristics.gp  imgo_sample.gp  imgo_test.gp  incr_test.gp  lipschitz_test.gp  map_test.gp  mggsa_operational_characteristics.gp  mggsa_operational_characteristics_density_test.gp  mggsa_operational_characteristics_incr_test.gp  mggsa_operational_characteristics_key_test.gp  mggsa_operational_characteristics_r_test.gp  mggsa_operational_characteristics_test.gp  mggsa_operational_characteristics_test_density.gp  mggsa_operational_characteristics_test_incr.gp  mggsa_operational_characteristics_test_key.gp  mggsa_operational_characteristics_test_r.gp  mggsa_sample.gp  mggsa_test.gp  mggsa_test_density.gp  mggsa_test_evolvent.gp  mggsa_test_families.gp  mggsa_test_incr.gp  mggsa_test_lipschitz.gp  mggsa_test_time.gp  multidimensional_constrained_operational_characteristics.gp  multidimensional_constrained_test.gp  onedimensional_constrained_test.gp  onedimensional_operational_characteristics.gp  onedimensional_test.gp  oper_characteristics.gp  peano_oper_char.gp  (+7 more)
scripts/functions/: multidimensional_constrained.txt  onedimensional.txt  onedimensional_constrained.txt
scripts/new_model_class/: fitting_family_problems_operational_characteristics.gp  fitting_family_problems_plot.gp
src/: BaseFittingFamilyOptProblems.cpp  CMakeLists.txt  FittingFamilyOptProblems.cpp  GsaMethod.cpp  Map.cpp  MggsaMethod.cpp  MyMath.cpp  OutputFile.cpp  PiyavskyMethod.cpp  ScanningMethod.cpp  ScanningReport.cpp  Script.cpp  TrialsFile.cpp  VariablesFile.cpp  gsa.cpp  imgo.cpp  map.cpp  mggsa.cpp  myMath.cpp  my_math.cpp  output_file.cpp  output_results.cpp  peano.cpp  print_result.cpp  start_script.cpp
(+58 files in other folders)
